<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkbrown"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/im1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp20"
            android:scaleType="centerCrop"
            android:src="@drawable/smokeys" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/smokey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp8"
                    android:text="@string/offerings"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp8"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp32"
                                android:layout_marginTop="@dimen/dp4"
                                android:src="@drawable/ic_baseline_fiber_manual_record_24px" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp8"
                                android:layout_marginTop="@dimen/dp4"
                                android:background="@color/lightgray"
                                android:text="@string/LateNightFood"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp18" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp32"
                                android:layout_marginTop="@dimen/dp4"
                                android:src="@drawable/ic_baseline_fiber_manual_record_24px" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp8"
                                android:layout_marginTop="@dimen/dp4"
                                android:background="@color/lightgray"
                                android:text="@string/VegetarianOptions"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp18" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp32"
                                android:layout_marginTop="@dimen/dp4"
                                android:src="@drawable/ic_baseline_fiber_manual_record_24px" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp8"
                                android:layout_marginTop="@dimen/dp4"
                                android:background="@color/lightgray"
                                android:text="@string/FreeDelivery"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp18" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp24"
                        android:onClick="message"
                        android:text="@string/menu" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/phonei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp16"
                        android:src="@drawable/ic_baseline_call_24px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp8"
                        android:layout_toEndOf="@id/phonei"
                        android:layout_toRightOf="@id/phonei"
                        android:autoLink="phone"
                        android:text="@string/pno"
                        android:textSize="@dimen/sp18" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/emaili"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp16"
                        android:layout_marginTop="@dimen/dp16"
                        android:src="@drawable/ic_baseline_mail_outline_24px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp8"
                        android:layout_marginTop="@dimen/dp16"
                        android:layout_toEndOf="@id/emaili"
                        android:layout_toRightOf="@id/emaili"
                        android:autoLink="email"
                        android:text="@string/smoe"
                        android:textSize="@dimen/sp18" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/addressi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp16"
                        android:layout_marginTop="@dimen/dp16"
                        android:src="@drawable/ic_baseline_location_on_24px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp8"
                        android:layout_marginRight="@dimen/dp8"
                        android:layout_marginTop="@dimen/dp16"
                        android:layout_toEndOf="@id/addressi"
                        android:layout_toRightOf="@id/addressi"
                        android:autoLink="map"
                        android:text="@string/smod"
                        android:textSize="@dimen/sp18" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>